<resources>
    <string name="app_name">Buscor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="don_t_have_an_account_register">Don’t have an account? </string>
    <string name="password">Password</string>
    <string name="username_email">Username / Email</string>
    <string name="go">Go</string>
    <string name="email">Email</string>
    <string name="already_have_an_account_log_in">Already have an account?</string>
    <string name="missing_credentials_fill_in_all_fields">Missing Credentials ! Fill In all Fields</string>
    <string name="missing">Missing</string>
    <string name="missing_credentials">Missing Credentials !</string>
    <string name="incorrect">Incorrect</string>
    <string name="register">Register</string>
    <string name="log_in">Log In</string>
</resources>